# qem-inverse-theory

./: .gitignore  CHANGELOG.md  LICENSE  PROJECT_STATUS_v0.9.md  README.md  REPRODUCIBILITY.md  ROADMAP.md  STATUS.md  pyproject.toml
docs/: ARXIV_READINESS_v1.2.md  PRE_ARXIV_CHECKLIST_v1.3.md  assumptions.md  benchmark_protocol.md  deep_research_implementation_audit.md  literature_map.md  structured_lower_bound_taxonomy.md  theory_questions.md  vision.md
experiments/: 01_constrained_inverse_zne.py  02_aicc_small_sample_failure.py  03_finite_shot_phase_diagram.py  04_bayesian_credible_intervals.py  05_structured_escape_hatches.py  06_n_sensitivity.py  07_bias_ambiguity_tradeoff.py  08_systematic_phase_diagram.py  09_bayesian_coverage.py  10_sequential_design.py  11_locality_aware_proxy.py  12_circuit_family_benchmarks.py  13_commutator_locality_envelope.py  14_two_point_lower_bound.py  generate_figures.py
paper/: README.md  claim_ledger.md  definitions.md  draft.md  literature.md  main.aux  main.out  main.tex  notes.md  outline.md  proofs.md  refs.bib  structured_escape_hatches.md  theorem_sketches.md
scripts/: build_arxiv_package.sh  check_arxiv_package.py  check_claims.py  check_manuscript_length.py  check_paper_assets.py  smoke_check.sh  test_arxiv_cleanroom.sh
tests/: test_aicc_selection.py  test_circuit_family_benchmarks.py  test_claim_safety.py  test_commutator_envelopes.py  test_constrained_estimators.py  test_lower_bounds.py  test_paper_assets.py  test_phase_diagram_metrics.py  test_shot_noise.py  test_spectral_constraints.py  test_v06_estimators.py  (+3 more)
(+35 files in other folders)
