[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qem-inverse-theory"
version = "0.1.0"
description = "Zero-noise extrapolation as a constrained quantum inverse problem"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "The Son Nguyen", email = "nguyensimon186@gmail.com"}]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
